display refinements for different screen width

--- a/ui_coding/explore.html
+++ b/ui_coding/explore.html
@@ -49,22 +49,26 @@
         <button class="btn btn-primary center-block">New</button>
         <div id="category" class="row center-block">
           <h5>Categories</h5>
-          <div class="list-group">
-            <button type="button" class="list-group-item">Category 1</button>
-            <button type="button" class="list-group-item">Category 2</button>
-            <button type="button" class="list-group-item">Category 3</button>
-            <button type="button" class="list-group-item">Category 4</button>
-            <button type="button" class="list-group-item">Category 5</button>
+          <div class="input-group">
+            <div class="input-group-button">
+              <button class="btn btn-default">Category 1</button>
+              <button class="btn btn-default">Category 2</button>
+              <button class="btn btn-default">Category 3</button>
+              <button class="btn btn-default">Category 4</button>
+              <button class="btn btn-default">Category 5</button>
+            </div>
           </div>
         </div>
         <div id="tags" class="row center-block">
           <h5>Tags</h5>
-          <div class="list-group">
-            <button type="button" class="list-group-item">Tag 1</button>
-            <button type="button" class="list-group-item">Tag 2</button>
-            <button type="button" class="list-group-item">Tag 3</button>
-            <button type="button" class="list-group-item">Tag 4</button>
-            <button type="button" class="list-group-item">Tag 5</button>
+          <div class="input-group">
+            <div class="input-group-button">
+              <button class="btn btn-default">Tag 1</button>
+              <button class="btn btn-default">Tag 2</button>
+              <button class="btn btn-default">Tag 3</button>
+              <button class="btn btn-default">Tag 4</button>
+              <button class="btn btn-default">Tag 5</button>
+            </div>
           </div>
         </div>
       </div>
@@ -104,7 +108,7 @@
           </div>
         </div>
         <div id="load-content" class="row">
-          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="center-block">
+          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
@@ -112,7 +116,7 @@
               <div class="badge"><span class="glyphicon glyphicon-stats"></span><span>999</span></div><span class="pull-right">post date</span>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="center-block">
+          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
@@ -120,7 +124,7 @@
               <div class="badge"><span class="glyphicon glyphicon-stats"></span><span>999</span></div><span class="pull-right">post date</span>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="center-block">
+          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
@@ -128,7 +132,15 @@
               <div class="badge"><span class="glyphicon glyphicon-stats"></span><span>999</span></div><span class="pull-right">post date</span>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="center-block">
+          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
+            <div class="content-pill-title">Title</div>
+            <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+            <div class="well zero-padding content-pill-footer">
+              <div class="badge"><span class="glyphicon glyphicon-eye-open"></span><span>999</span></div>
+              <div class="badge"><span class="glyphicon glyphicon-stats"></span><span>999</span></div><span class="pull-right">post date</span>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
@@ -143,16 +155,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed-->
     <script src="js/bootstrap_3.36_min.js"></script>
-    <footer id="footer" class="container-fluid">
-      <div class="col-md-2"></div>
-      <div class="col-md-4">
-        <h5>CollabApp Logo</h5>
-        <h6>All rights reserved &#169;</h6>
-      </div>
-      <div class="col-md-4 text-right bottom-align-text">
-        <h6>School of Mechanical And Aerospace Engineering<br>Nanyang Technological University, Singapore</h6>
-      </div>
-      <div class="col-md-2"></div>
-    </footer>
+    <script>
+      $(document).ready(function() {
+        var screen_height = $(window).height();
+        var navbar_content_height = $('.navbar').height();
+        var content_height = screen_height - navbar_content_height;
+        $('#left-panel').css('height', content_height + 'px');
+        $('#right-panel').css('height', content_height + 'px');
+        $('#left-panel').css('max-height', content_height + 'px');
+        $('#right-panel').css('max-height', content_height + 'px');
+      })
+      
+    </script>
   </body>
 </html>
