--- a/ui_coding/explore.html
+++ b/ui_coding/explore.html
@@ -109,44 +109,48 @@
         </div>
         <div id="load-content" class="row"><a href="project.html" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
-            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;Author name</span></div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
               <div class="label label-success">Project</div>
-              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"></span><span>999</span></div>
-              <div class="label label-default"><span class="glyphicon glyphicon-stats"></span><span>999</span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"><span>&nbsp;999</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;999</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;888</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;888</span></span></div>
             </div></a><a href="brainstorm.html" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
-            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;Author name</span></div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
               <div class="label label-warning">Brainstorm</div>
-              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"></span><span>999</span></div>
-              <div class="label label-default"><span class="glyphicon glyphicon-stats"></span><span>999</span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"><span>&nbsp;999</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;999</span></span></div>
             </div></a><a href="brainstorm.html" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
-            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;Author name</span></div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
               <div class="label label-warning">Brainstorm</div>
-              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"></span><span>999</span></div>
-              <div class="label label-default"><span class="glyphicon glyphicon-stats"></span><span>999</span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"><span>&nbsp;999</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;999</span></span></div>
             </div></a><a href="project.html" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
-            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;Author name</span></div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
               <div class="label label-success">Project</div>
-              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"></span><span>999</span></div>
-              <div class="label label-default"><span class="glyphicon glyphicon-stats"></span><span>999</span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"><span>&nbsp;999</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;999</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;888</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;888</span></span></div>
             </div></a><a href="brainstorm.html" class="col-xs-12 col-sm-6 col-md-3 zero-margin content-pill"><img src="http://placehold.it/500x300" class="img-responsive">
             <div class="content-pill-title">Title</div>
-            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;&nbsp;Author name</span></div>
+            <div class="content-pill-author"><span><img src="http://placehold.it/20x20" class="img-circle"></span><span>&nbsp;&nbsp;Author name</span></div>
             <div class="content-pill-description text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed dictum eros. Proin in ultricies nibh. Vestibulum tristique sollicitudin neque, vitae interdum diam laoreet at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
             <div class="well zero-padding content-pill-footer">
               <div class="label label-warning">Brainstorm</div>
-              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"></span><span>999</span></div>
-              <div class="label label-default"><span class="glyphicon glyphicon-stats"></span><span>999</span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-eye-open"><span>&nbsp;999</span></span></div>
+              <div class="label label-default"><span class="glyphicon glyphicon-stats"><span>&nbsp;999</span></span></div>
             </div></a></div>
       </div>
     </div>
