--- a/ui_coding/new_project_page_1.html
+++ b/ui_coding/new_project_page_1.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap-->
     <link href="css/bootstrap_paper.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <title>New Project | CollabApp</title>
+    <title>New | CollabApp</title>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries-->
     <!-- WARNING: Respond.js doesn't work if you view the page via file://-->
     <!--if lt IE 9
@@ -60,14 +60,36 @@
       <div class="col-md-2"></div>
       <div class="col-md-8 create-project-input-area">
         <form>
-          <h4 class="text-center">About Your Project</h4>
           <div class="form-group">
-            <label for="project-title" class="input-labelling">Project Title</label>
+            <label class="input-labelling">It is a</label>
+            <div class="radio-inline">
+              <label>
+                <input id="optionsRadios1" type="radio" name="optionsRadios" value="option1" checked="">Brainstorm
+              </label>
+            </div>
+            <div class="radio-inline">
+              <label>
+                <input id="optionsRadios2" type="radio" name="optionsRadios" value="option2">Project
+              </label>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="categories" class="input-labelling">Categories</label>
+            <select id="categories" class="form-control">
+              <option>Category 1</option>
+              <option>Category 2</option>
+              <option>Category 3</option>
+              <option>Category 4</option>
+              <option>Category 5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="project-title" class="input-labelling">Title</label>
             <input id="project-title" type="text" class="form-control">
           </div>
           <div class="form-group">
-            <label for="project-description" class="input-labelling">Project Description</label>
-            <input id="project-description" type="text" class="form-control">
+            <label for="project-description" class="input-labelling">Description</label>
+            <textarea id="project-description" type="text" rows="3" class="form-control"></textarea>
           </div>
           <div class="form-group">
             <label for="image-upload" class="input-labelling">Images</label>
