--- a/ui_coding/explore.html
+++ b/ui_coding/explore.html
@@ -49,14 +49,25 @@
         <button onclick="location.href = 'new_project_page_1.html'" class="btn btn-primary center-block">New</button>
         <div id="category" class="row center-block">
           <h5>Categories</h5>
-          <div class="input-group">
-            <div class="input-group-button">
-              <button class="btn btn-default">Category 1</button>
-              <button class="btn btn-default">Category 2</button>
-              <button class="btn btn-default">Category 3</button>
-              <button class="btn btn-default">Category 4</button>
-              <button class="btn btn-default">Category 5</button>
-            </div>
+          <div data-toggle="buttons" class="btn-group">
+            <label class="btn btn-default active">All
+              <input type="checkbox" autocomplete="off" checked>
+            </label>
+            <label class="btn btn-default">Category 1
+              <input type="checkbox" autocomplete="off">
+            </label>
+            <label class="btn btn-default">Category 2
+              <input type="checkbox" autocomplete="off">
+            </label>
+            <label class="btn btn-default">Category 3
+              <input type="checkbox" autocomplete="off">
+            </label>
+            <label class="btn btn-default">Category 4
+              <input type="checkbox" autocomplete="off">
+            </label>
+            <label class="btn btn-default">Category 5
+              <input type="checkbox" autocomplete="off">
+            </label>
           </div>
         </div>
       </div>
@@ -147,6 +158,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed-->
     <script src="js/bootstrap_3.36_min.js"></script>
     <script>
+      // controlling the height of left panel
       $(document).ready(function() {
         var screen_height = $(window).height();
         var navbar_content_height = $('.navbar').height();
