added login and register modal

--- a/ui_coding/explore.html
+++ b/ui_coding/explore.html
@@ -44,6 +44,59 @@
         </div>
       </div>
     </nav>
+    <div id="login" tabindex="-1" role="dialog" class="modal fade">
+      <div role="document" class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
+            <h4 class="text-center modal-title">Welcome back!</h4>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <input type="email" placeholder="Email" class="center-block login-modal-element-1">
+              </div>
+              <div class="form-group">
+                <input type="password" placeholder="Password" class="center-block login-modal-element-1">
+              </div>
+              <button class="btn btn-default center-block login-modal-element-2">Login</button>
+              <h6 class="text-center"><a class="text-muted">Forgot Password?</a></h6>
+            </form>
+            <div class="container-fluid">
+              <div class="btn btn-danger login-modal-login-with">Log in with Google+ <img src="img/google_plus_logo.png", width="20px"></img></div>
+              <div class="btn btn-primary login-modal-login-with">Log in with Facebook <img src="img/facebook_logo.png", width="20px"></img></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="register" tabindex="-1" role="dialog" class="modal fade">
+      <div role="document" class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
+            <h4 class="text-center">Join the revolution now!!!</h4>
+            <div style="border-bottom: 3px solid #d3d3d3; padding-bottom: 5px;" class="container-fluid">
+              <div class="btn btn-danger login-modal-login-with">Sign up with Google+ <img src="img/google_plus_logo.png", width="20px"></img></div>
+              <div class="btn btn-primary login-modal-login-with">Sign up with Facebook <img src="img/facebook_logo.png", width="20px"></img></div>
+            </div>
+            <h4 class="text-center">OR</h4>
+            <form>
+              <div class="form-group">
+                <input type="text" placeholder="Username" class="center-block login-modal-element-1">
+              </div>
+              <div class="form-group">
+                <input type="email" placeholder="Email" class="center-block login-modal-element-1">
+              </div>
+              <div class="form-group">
+                <input type="password" placeholder="Password" class="center-block login-modal-element-1">
+              </div>
+              <button class="btn btn-default center-block login-modal-element-2">Sign up</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container-fluid zero-margin zero-padding">
       <div id="left-panel" class="col-md-2">
         <button onclick="location.href = 'new_project_page_1.html'" class="btn btn-primary center-block">New</button>
