--- a/ui_coding/explore.html
+++ b/ui_coding/explore.html
@@ -34,12 +34,8 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li>
-              <!-- add modal--><a href="#login">Login</a>
-            </li>
-            <li>
-              <!-- add modal--><a href="#register">Register</a>
-            </li>
+            <li><a data-toggle="modal" data-target="#login">Login</a></li>
+            <li><a data-toggle="modal" data-target="#register">Register</a></li>
           </ul>
         </div>
       </div>
