created user settings page

--- a/ui_coding/user.html
+++ b/ui_coding/user.html
@@ -33,7 +33,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a data-toggle="dropdown">Username<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li class="user-control-dropdown">Configure</li>
+                <li class="user-control-dropdown"><a href="user_config.html">Configure</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="user-control-dropdown">Logout</li>
               </ul>
